--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.1",
     "react-redux": "^8.0.5",
+    "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
-    "redux": "^4.2.0",
+    "redux": "^4.2.1",
+    "redux-first-history": "^5.1.1",
     "redux-saga": "^1.2.2",
     "web-vitals": "^2.1.4"
   },
